--- a/css/forms.less
+++ b/css/forms.less
@@ -520,7 +520,7 @@ html:not(.ui-no-effects) {
                 select { line-height: (@btn-lg - 2 * @form-padding - 2); height: @btn-lg; }
             }
             &.ui-border-dual {
-                select { line-height: (@btn-lg - 2 * @form-padding - @border-dual * 2); height: (@btn-lg - @border-dual * 2);; }
+                select { line-height: (@btn-lg - 2 * @form-padding - @border-dual * 2); height: (@btn-lg - @border-dual * 2); }
             }
 
             .ui-icon { ._icon(@icon-default-size); right: (@form-padding * 2); }
