--- a/css/grid.less
+++ b/css/grid.less
@@ -234,7 +234,7 @@ each(@custom-static-grid-sizes, {
 
         &:not(.ui-no-fluid):not(.ui-xs-fluid) {
             & > [class*="ui-col-"]:not([class*="ui-col-sm-"]):not([class*="ui-col-xs-"]) {
-                &:not(.ui-no-fluid):not(.ui-xs-fluid) { width: 100%; clear: both;; }
+                &:not(.ui-no-fluid):not(.ui-xs-fluid) { width: 100%; clear: both; }
             }
             & > [class*="ui-offset-"]:not([class*="ui-offset-sm-"]):not([class*="ui-offset-xs-"]) {
                 &:not(.ui-no-fluid):not(.ui-xs-fluid) { margin-left: 0; }
