--- a/css/tables.less
+++ b/css/tables.less
@@ -73,7 +73,7 @@
             &:first-of-type { font-weight: @font-bold; ._bg-var(table-sidebar-bg); ._border-var(@dir: border-right; @var: table-border-color); }
         }
         &.ui-align-c {
-            td:not(:first-child) { text-align: center;; }
+            td:not(:first-child) { text-align: center; }
         }
     }
 
