--- a/css/tooltip.less
+++ b/css/tooltip.less
@@ -48,7 +48,7 @@
 
             i { border-bottom-color: @no-color; border-right-color: @no-color; }
         }
-        .ui-tooltip-content { text-align: center;; }
+        .ui-tooltip-content { text-align: center; }
     }
     &[data-ui-pos="r"] {
         & > span {
